revised to proceeding

--- a/Paper_revised.tex
+++ b/Paper_revised.tex
@@ -35,12 +35,12 @@
 %%%%% END OF 1st ADJUSTMENTS SECTION %%%%%
 
 \usepackage[T1]{fontenc}  %% needed for special characters (umlaut)
-\usepackage[utf8]{inputenc}
+\usepackage[latin1]{inputenc}
 \usepackage{graphicx}     %% for graphical things such as including pictures
 \usepackage{url}          %% for proper formatting of URLs
 
 % Albins Packages
-\usepackage{array}
+% \usepackage{array}
 
 %
 \begin{document}
@@ -81,7 +81,7 @@
 % the abstract in between them.
 %
 \begin{abstract}
-This study aims to investigate if it is possible to receive better user performance when using a high-color-contrast compared to a low-color-contrast touch screen interface in a mobile web application. The performance was measured by combining the time each user took to respond to instructions (reaction time) and the number of input errors the user made. Received test data appeared to be corrupt, most probably due to limitations in web application technology, despite this our result show that the low color contrast interface produced 475\% more user input errors compared to the high color contrast interface. No difference in reaction time could be found between the two versions.
+This study aims to investigate if it is possible to receive better user performance when using a high-color-contrast compared to a low-color-contrast touch screen interface in a mobile web application. The performance was measured by combining the time each user took to respond to instructions (reaction time) and the number of input errors the user made. Received test data appeared to be corrupt, most probably due to limitations in web application technology, despite this our result shows that the low color contrast interface produced 475\% more user input errors compared to the high color contrast interface. No difference in reaction time could be found between the two versions.
 \end{abstract}
 %
 %
@@ -89,9 +89,9 @@ This study aims to investigate if it is possible to receive better user performa
 %%%%% END OF 2nd ADJUSTMENTS SECTION %%%%%
 
 \section{Introduction}
-The main goal with this paper is to evaluate if color contrast has a significant impact on usability in web based smart-phone applications. Consumer touch screen devices such as smart-phones have rapidly increased in number and availability recent years. The touch screen technology has made great advances~\cite{jennings2013touch} and it is frequently used as a way of receiving user input. When this technology moves to a broader audience, higher demands on usability needs to be set~\cite{gong2004guidelines}. To further explore how usability can be improved using touch screen technology we have in this paper investigated if reaction time (the time it takes for a user to react on instructions, further referred to as RT in this paper) and user input errors (the number of user input errors when interacting with a system, further referred to as UIE in this paper) can reach better results by increasing color contrast within the interface. With "better results" we mean fewer UIEs and faster RTs. Increased number of user input errors means that users repeatedly presses the wrong buttons which tells us that it is hard to accomplish desired tasks. Faster reaction times does not necessarily mean "better", but in this experiment we had tasks that should be performed as fast as possible which led us to the conclusion, faster reaction times are "better".
+The main goal with this paper is to evaluate if color contrast has a significant impact on usability in web based smart-phone applications. Consumer touch screen devices such as smart-phones have rapidly increased in number and availability recent years. The touch screen technology has made great advances~\cite{jennings2013touch} and it is frequently used as a way of receiving user input. When this technology moves to a broader audience, higher demands on usability needs to be set~\cite{gong2004guidelines}. To further explore how usability can be improved using touch screen technology we have in this paper investigated if reaction time (the time it takes for a user to react on instructions, further referred to as RT in this paper) and user input errors (the number of user input errors when interacting with a system, further referred to as UIE in this paper) can reach better results by increasing color contrast within the interface. With "better results" we intend to mean fewer UIEs and faster RTs. Increased number of user input errors means that users repeatedly presses the wrong buttons which tells us that it is hard to accomplish desired tasks. Faster reaction times does not necessarily mean "better", but in this experiment we had tasks that should be performed as fast as possible which led us to the conclusion, faster reaction times are "better".
 
-Contrast is determined by the difference in color and brightness of an object and objects within the same field of view. High contrast is the degree of difference between dark and light when it approaches the maximum possible difference. Low contrast is the opposite, low difference between dark light.
+Contrast is determined by the difference in color and brightness of an object and objects within the same field of view. High contrast is the degree of difference between dark and light where it approaches the maximum possible difference. Low contrast is the opposite, low degree of difference between dark light.
 
 Earlier studies completed in this field have explored how we perceive different color contrast and how it can affect our reading performance~\cite{wu2003improving}. It has also been proved that chromaticity, contrast, and cone opponency in color space can affect RTs~\cite{mckeefry2003simple}. Many best practices for mobile development have also shown that "requirements for sufficient color contrast"~\cite{marcus2013design} must be met to best amplify the content. Still the question remains, can a high color contrast interface increase the the reaction time and decrease the amount of user input errors?
 
